# f1-sql

./: .gitignore  10_f1db_results.sql  12_f1db_pitStops.sql  13_f1db_qualifying.sql  14_f1db_sprintresults.sql  1_f1db_drivers.sql  2_f1db_constructors.sql  3_f1db_status.sql  4_f1db_circuits.sql  5_f1db_seasons.sql  6_f1db_constructorResults.sql  7_f1db_constructorStandings.sql  8_f1db_driverstandings.sql  9_f1db_races.sql  ATTRIBUTION.md  Dockerfile  InstallationScript.sql  LICENSE-DATA  LICENSE-DOCS  NOTICE  README.md  SECURITY.md  build_database.ps1  circuits.csv  constructor_results.csv  constructor_standings.csv  docker-compose.yml  drivers.csv  f1db_foreignkeys.sql  f1db_tables.sql  file-downloader.ps1  pyproject.toml  raceCalendar.json  races.csv  results.csv  script_runner.ps1  sprintresults.csv  status.csv
.github/: dependabot.yml  trafico.yml
backups/: 2014_SequelFormula_Italy_2023.7zip  2019_SequelFormula_Italy_2023.7zip
configDatabase/: 0.0 Create Schema.sql
database/: LICENSE-DOCS  NOTICE  README.md
docs/: compatibility-policy.md  development.md  historical-coverage.md  legacy-data-audit.md  legacy-table-inventory.md  legacy-to-v2-mapping.md  normalization.md  operations.md  pipeline.md  quality-rules.json  rebuild-master-plan.md  release-policy.md  sql-loading.md  user-guide.md
example_queries/: latest-results.sql  results.sql
examplequeries/: results.sql
productionDatabase/: 0.0 CreateSchema.sql  1.0 Ref Country.sql  1.1 Ref CircuitDirections.sql  1.2 Ref CircuitType.sql  1.3. Ref Seasons.sql  10. CircuitsLocation.sql  11. CircuitImages.sql  (+11 more)
(+1043 files in other folders)
