[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-sql"
version = "0.1.0.dev0"
description = "Deterministic Formula One data pipeline for Microsoft SQL Server"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "F1 SQL contributors"}]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
]
dependencies = []

[project.optional-dependencies]
fastf1 = ["fastf1>=3.8,<4"]
sqlserver = ["pyodbc>=5,<6"]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[project.scripts]
f1sql = "f1sql.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["f1sql"]
mypy_path = "src"
